--- a/_layouts/book.html
+++ b/_layouts/book.html
@@ -32,19 +32,33 @@ layout: default
     </div>
   {% endif %}
 
-  {% comment %} Awards {% endcomment %}
-  {% if page.awards %}
-    <div class="book-awards">
-      Awards:
-      {% assign sorted_awards = page.awards | sort %}
-      {% for award in sorted_awards %}
-        <a class="book-award" href="/books/by-award/#{{ award | slugify }}-award">
-          {%- assign words = award | split: ' ' -%}
-          {%- for word in words %}
-            {{ word | capitalize }}{%- unless forloop.last %} {% endunless -%}
-          {% endfor -%}
-        </a>{%- unless forloop.last -%}, {%- endunless -%}
-      {% endfor %}
+  {% comment %} Awards and Favorites {% endcomment %}
+  {%- assign favorites_cache = site.data.link_cache.favorites_mentions -%}
+  {%- assign mentioning_posts = favorites_cache[page.url] | default: nil -%}
+
+  {% if page.awards or mentioning_posts %}
+    <div class="book-awards">Awards:
+    {% if page.awards %}
+        {% assign sorted_awards = page.awards | sort %}
+        {% for award in sorted_awards %}
+          <a class="book-award" href="/books/by-award/#{{ award | slugify }}-award">
+            {%- assign words = award | split: ' ' -%}
+            {%- for word in words %}
+              {{ word | capitalize }}{%- unless forloop.last %} {% endunless -%}
+            {% endfor -%}
+          </a>{%- unless forloop.last -%}, {%- endunless -%}
+        {% endfor %}
+      {%- endif -%}
+
+      {%- if page.awards and mentioning_posts -%}, {% endif -%}
+
+      {%- if mentioning_posts -%}
+        {%- assign sorted_posts = mentioning_posts | sort: "is_favorites_list" | reverse -%}
+        {%- for post in sorted_posts -%}
+          <a class="book-favorite-link" href="{{ post.url | relative_url }}">{{ post.title }}</a>{%- unless forloop.last -%}, {% endunless -%}
+        {%- endfor -%}
+      {%- endif -%}
+
     </div>
   {% endif %}
 
@@ -53,8 +67,6 @@ layout: default
   {% if page.rating %}
     {% rating_stars page.rating %}
   {% endif %}
-
-  {% include favorites_banner.html %}
 
   {{ content }}
 
