--- a/_layouts/book.html
+++ b/_layouts/book.html
@@ -14,6 +14,8 @@ layout: default
   </div>
   {% endif %}
 
+  <!-- Book Metadata -->
+
   {% comment %} Authors {% endcomment %}
   {% assign authors_html_output = "" %}
   {% capture captured_authors_html %}
@@ -55,7 +57,7 @@ layout: default
       {%- if mentioning_posts -%}
         {%- assign sorted_posts = mentioning_posts | sort: "is_favorites_list" | reverse -%}
         {%- for post in sorted_posts -%}
-          <a class="book-favorite-link" href="{{ post.url | relative_url }}">{{ post.title }}</a>{%- unless forloop.last -%}, {% endunless -%}
+          <a class="book-favorite-link" href="{{ post.url | relative_url }}">{{ post.is_favorites_list }} Favorites</a>{%- unless forloop.last -%}, {% endunless -%}
         {%- endfor -%}
       {%- endif -%}
 
