--- a/_layouts/book.html
+++ b/_layouts/book.html
@@ -64,49 +64,10 @@ layout: default
     </div>
   {% endif %}
 
-  {%- comment -%} On a CANONICAL page, link to its archives {%- endcomment -%}
-  {%- assign archived_review_docs = "" | split: "" -%}
-  {%- for book in site.books -%}
-    {%- if book.canonical_for == page.url -%}
-      {%- assign archived_review_docs = archived_review_docs | push: book -%}
-    {%- endif -%}
-  {%- endfor -%}
-
-  {%- if archived_review_docs.size > 0 -%}
-    <div class="archived-reviews">
-      <i>Previously reviewed on
-      {%- assign sorted_docs = archived_review_docs | sort: "date" | reverse -%}
-      {%- assign link_array = "" | split: "" -%}
-      {%- for doc in sorted_docs -%}
-        {%- capture link_html -%}
-          <a href="{{ doc.url | relative_url }}">{{ doc.date | date: '%B %d, %Y' }}</a>
-        {%- endcapture -%}
-        {%- assign link_array = link_array | push: link_html -%}
-      {%- endfor -%}
-
-      {%- capture formatted_links -%}
-        {%- assign num_links = link_array | size -%}
-        {%- if num_links == 1 -%}
-          {{ link_array[0] }}
-        {%- elsif num_links == 2 -%}
-          {{ link_array[0] }} and {{ link_array[1] }}
-        {%- else -%}
-          {%- assign all_but_last_index = num_links | minus: 1 -%}
-          {%- assign all_but_last = link_array | slice: 0, all_but_last_index -%}
-          {%- assign last_item = link_array | last -%}
-          {{ all_but_last | join: ', ' }}, and {{ last_item }}
-        {%- endif -%}
-      {%- endcapture -%}
-      {{ formatted_links | prepend: ' ' }}
-      </i>
-    </div>
-  {%- endif -%}
-
   {%- comment -%} On an ARCHIVED page, link back to its canonical version {%- endcomment -%}
   {%- if page.canonical_for and page.canonical_for != "" -%}
     <div class="archived-notice">
-      <i>This is an archived review. Read the <a href="{{ page.canonical_for |
-      relative_url }}"><strong>current version</strong></a>.</i>
+      This is an archived review from {{ page.date | date: '%B %d, %Y' }}. Read the <a href="{{ page.canonical_for | relative_url }}"><strong>current review</strong></a>.
     </div>
   {%- endif -%}
 
@@ -121,6 +82,33 @@ layout: default
 </article>
 
 <hr>
+
+{%- comment -%} On a CANONICAL page, list its archives {%- endcomment -%}
+{%- assign archived_review_docs = "" | split: "" -%}
+{%- for book in site.books -%}
+  {%- if book.canonical_for == page.url -%}
+    {%- assign archived_review_docs = archived_review_docs | push: book -%}
+  {%- endif -%}
+{%- endfor -%}
+
+{%- if archived_review_docs.size > 0 -%}
+  <!-- Previous Review -->
+  <aside class="previous-reviews">
+    <h2 class="book-review-headline">Previous Reviews</h2>
+
+    <ul class="previous-reviews-list">
+      {%- assign sorted_docs = archived_review_docs | sort: "date" | reverse -%}
+      {%- for doc in sorted_docs -%}
+        <li>
+          <a href="{{ doc.url | relative_url }}">Review from {{ doc.date | date: '%B %d, %Y' }}</a>
+          {%- if doc.rating -%}
+            &nbsp;{% rating_stars doc.rating wrapper_tag="span" %}
+          {%- endif -%}
+        </li>
+      {%- endfor -%}
+    </ul>
+  </aside>
+{%- endif -%}
 
 <!-- Backlinks -->
 {% book_backlinks %}
