--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -230,6 +230,12 @@ h1:hover .anchor-link-img, h2:hover .anchor-link-img, h3:hover .anchor-link-img,
   font-style: italic;
 }
 
+// Archived review note
+.archived-notice {
+  margin-top: 1em;
+  font-style: italic;
+}
+
 // Previous Reviews
 .book-review-headline {
   font-size: $h456-font-size;
