Remove Gab41 links, it's dead

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,11 +16,10 @@ layout: default
   </div>
 
   {% if page.gab41 %}
-    <!-- Top note with link back to Gab41 -->
+    <!-- Top note about Gab41 -->
     <p>
-    <em>This article originally appeared on
-      <a href="{{ page.gab41 }}"><strong>Lab41's blog: Gab41</strong></a>. It
-      is reposted here with permission.</em>
+    <i>This article originally appeared on Lab41's blog: Gab41. It is reposted
+    here with permission.</i>
     </p>
   {% endif %}
 
