--- a/_includes/anchor_headings.html
+++ b/_includes/anchor_headings.html
@@ -54,11 +54,12 @@
       The original HTML with the addition of anchors inside of all of the h1-h6 headings.
   {% endcomment %}
 
-  {% assign minHeader = include.h_min | default: 1 %}
-  {% assign maxHeader = include.h_max | default: 6 %}
-  {% assign beforeHeading = include.beforeHeading %}
-  {% assign headerAttrs = include.headerAttrs %}
-  {% assign nodes = include.html | split: '<h' %}
+  {% assign minHeader = include | optional: 'h_min' | default: 1 %}
+  {% assign maxHeader = include | optional: 'h_max' | default: 6 %}
+  {% assign beforeHeading = include | optional: 'beforeHeading' %}
+  {% assign headerAttrs = include | optional: 'headerAttrs' %}
+  {% assign html = include | optional: 'html' %}
+  {% assign nodes = html | split: '<h' %}
 
   {% capture edited_headings %}{% endcapture %}
 
@@ -127,19 +128,23 @@
 
       {% capture anchor %}href="#{{ html_id }}"{% endcapture %}
 
-      {% if include.anchorClass %}
-        {% capture anchor %}{{ anchor }} class="{{ include.anchorClass }}"{% endcapture %}
+      {% assign anchorClass = include | optional: 'anchorClass' %}
+      {% if anchorClass %}
+        {% capture anchor %}{{ anchor }} class="{{ anchorClass }}"{% endcapture %}
       {% endif %}
 
-      {% if include.anchorTitle %}
-        {% capture anchor %}{{ anchor }} title="{{ include.anchorTitle | replace: '%heading%', escaped_header }}"{% endcapture %}
+      {% assign anchorTitle = include | optional: 'anchorTitle' %}
+      {% if anchorTitle %}
+        {% capture anchor %}{{ anchor }} title="{{ anchorTitle | replace: '%heading%', escaped_header }}"{% endcapture %}
       {% endif %}
 
-      {% if include.anchorAttrs %}
-        {% capture anchor %}{{ anchor }} {{ include.anchorAttrs | replace: '%heading%', escaped_header | replace: '%html_id%', html_id }}{% endcapture %}
+      {% assign anchorAttrs = include | optional: 'anchorAttrs' %}
+      {% if anchorAttrs %}
+        {% capture anchor %}{{ anchor }} {{ anchorAttrs | replace: '%heading%', escaped_header | replace: '%html_id%', html_id }}{% endcapture %}
       {% endif %}
 
-      {% capture anchor %}<a {{ anchor }}>{{ include.anchorBody | replace: '%heading%', escaped_header | default: '' }}</a>{% endcapture %}
+      {% assign anchorBody = include | optional: 'anchorBody' %}
+      {% capture anchor %}<a {{ anchor }}>{{ anchorBody | replace: '%heading%', escaped_header | default: '' }}</a>{% endcapture %}
 
       <!-- In order to prevent adding extra space after a heading, we'll let the 'anchor' value contain it -->
       {% if beforeHeading %}
@@ -151,13 +156,13 @@
 
     {% capture new_heading %}
 <h{{ _hAttrToStrip }}
-  {{ include.bodyPrefix }}
+  {{ include | optional: 'bodyPrefix' }}
   {% if beforeHeading %}
     {{ anchor }}{{ header }}
   {% else %}
     {{ header }}{{ anchor }}
   {% endif %}
-  {{ include.bodySuffix }}
+  {{ include | optional: 'bodySuffix' }}
 </h{{ headerLevel }}>
     {% endcapture %}
 
