--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -237,7 +237,7 @@ h1:hover .anchor-link-img, h2:hover .anchor-link-img, h3:hover .anchor-link-img,
 }
 
 // Previous Reviews
-.book-review-headline {
+.previous-reviews-headline {
   font-size: $h456-font-size;
 }
 
